--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,7 @@
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
-							<version>${lombok.version}</version>
+							<version>1.18.20</version>
 						</path>
 						<path>
 							<groupId>org.mapstruct</groupId>
